--- a/Junior/clipboard-landing-page-main/src/sass/components/_cta.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_cta.scss
@@ -1,15 +1,28 @@
 .cta {
   text-align: center;
-  padding-bottom: 10.5rem; // 168px
+  padding-bottom: 10.3125rem; // 165px
+
+  @include breakpoint-up(lg) {
+    padding-bottom: 9rem; // 144px
+  }
 
   &__text {
     margin-bottom: 2.75rem; // 44px
 
     h2 {
-      margin-bottom: 1.25rem; // 24px
+      margin-bottom: 1.75rem; // 24px
+    }
+
+    p {
+      margin: 0 auto;
+
+      @include breakpoint-up(lg) {
+        width: 688px;
+      }
     }
   }
 
-  &__btns {
-  }
+  //   &__btns {
+  // border: 1px solid red;
+  //   }
 }
