--- a/Junior/clipboard-landing-page-main/src/sass/_variables.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_variables.scss
@@ -5,6 +5,7 @@ $strongCyan: hsl(171, 66%, 44%);
 $lightBlue: hsl(233, 100%, 69%);
 $darkGrayishBlue: hsl(210, 10%, 33%);
 $grayishBlue: hsl(201, 11%, 66%);
+$lightGray: #f5f6f8;
 $white: #fff;
 $primaryBtnShadow: hsl(171, 67%, 36%);
 $secondaryBtnShadow: hsl(233, 51%, 52%);
