Style accordion and mobile illustration

--- a/Newbie/faq-accordion-card-main/src/components/Accordion/accordion.scss
+++ b/Newbie/faq-accordion-card-main/src/components/Accordion/accordion.scss
@@ -1,24 +1,50 @@
-// .accordion {
+.accordion {
+  width: 100%;
+  padding: 0 1.5rem;
+  background-color: #fff;
+  border-radius: $radius;
 
-//     .accordion__img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-//     }
+  .accordion__img {
+    height: 134px; // 214px
+    width: 100%;
+    position: relative;
 
-//     .accordion__faq {
+    &::before {
+      content: "";
+      position: absolute;
+      top: -83%;
+      height: 220px; // 220px
+      width: 100%;
 
-//         .sr-only {
+      background-image: url(../../assets/images/illustration-woman-online-mobile.svg),
+        url(../../assets/images/bg-pattern-mobile.svg);
+      background-repeat: no-repeat, no-repeat;
+      background-size: 240px, 240px;
+      background-position: top, center 97.5%;
+    }
+  }
 
-//         }
+  .accordion__faq {
+    width: 100%;
+    text-align: center;
 
-//         h2 {
+    .sr-only {
+      position: absolute;
+      left: -10000rem;
+      top: -100rem;
+    }
 
-//         }
+    .card {
+      border: $test;
+      width: 100%;
 
-//         .card {
-
-//             p {
-
-//             }
-//         }
-//     }
-// }
+      p {
+        color: $neutral-text-dark-blue;
+      }
+    }
+  }
+}
