--- a/Newbie/faq-accordion-card-main/src/sass/_globals.scss
+++ b/Newbie/faq-accordion-card-main/src/sass/_globals.scss
@@ -11,9 +11,6 @@ html {
 }
 
 body {
-  height: 100vh;
-  background: $bg-gradient;
-  background-repeat: no-repeat;
   font-family: $ff;
 }
 
@@ -24,4 +21,44 @@ h4,
 h5,
 h6 {
   font-weight: 700;
+}
+
+.container {
+  height: 100vh;
+  width: 100%;
+  padding: 0 1.5rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: $bg-gradient;
+  background-repeat: no-repeat;
+}
+
+.txt {
+  &-heading {
+    color: $primary-text-blue;
+    font-weight: 700;
+    font-size: 2rem; // 32px
+  }
+
+  &-title {
+    color: $neutral-text-dark-blue;
+    font-weight: 400;
+    font-size: 0.875rem; // 14px
+    letter-spacing: -0.03em;
+
+    &--bold {
+      color: $primary-text-blue;
+      font-weight: 700;
+    }
+  }
+
+  &-description {
+    font-weight: 400;
+    font-size: 0.75rem; // 12px
+    line-height: 147%;
+    letter-spacing: 0.005em;
+  }
 }
