--- a/Newbie/faq-accordion-card-main/src/sass/_variables.scss
+++ b/Newbie/faq-accordion-card-main/src/sass/_variables.scss
@@ -15,3 +15,8 @@ $bg-gradient: linear-gradient(
 // Font
 $fs-base: 0.75rem; // 12px
 $ff: "Kumbh Sans", Arial, Helvetica, sans-serif;
+
+// Layout
+$radius: 1.375rem; // 22px
+
+$test: 1px solid red;
